<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_pie_chart_white_24dp"
            android:title="@string/status" />
        <item
            android:id="@+id/nav_excluded_phones"
            android:icon="@drawable/ic_view_list_white_24dp"
            android:title="@string/phone_list" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_perm_device_information_white_24dp"
            android:title="@string/about" />
    </group>

</menu>
