<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_hourglass_001"
            android:contentDescription="@string/application_logo"/>

        <TextView
            android:id="@+id/textAbAp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/about_app_info"
            android:textSize="@dimen/text_size_header"
            android:textStyle="bold"
            android:layout_below="@+id/imageView"/>

        <TextView
            android:id="@+id/lblName"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textAbAp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textStyle="bold|italic"
            android:gravity="right"/>

        <TextView
            android:id="@+id/valName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textAbAp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/lblName"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/lblVersion"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblName"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/version"
            android:textStyle="bold|italic"
            android:gravity="right"/>

        <TextView
            android:id="@+id/valVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/valName"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/lblName"
            android:text="1.0" />

        <TextView
            android:id="@+id/lblLicence"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblVersion"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/licence"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/valLicence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/valVersion"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/lblLicence"
            android:text="Apache License, Version 2.0" />

        <TextView
            android:id="@+id/textAbAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/valLicence"
            android:layout_marginTop="10dp"
            android:text="@string/about_author"
            android:textSize="@dimen/text_size_header"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblAuthName"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textAbAuth"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/author_name_label"
            android:layout_marginTop="10dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/valAuthName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textAbAuth"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/lblAuthName"
            android:text="@string/author_name" />

        <TextView
            android:id="@+id/lblAuthContact"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblAuthName"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/author_contact"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/valAuthContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/valAuthName"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/lblAuthContact"
            android:text="branislav.lungulovic@gmail.com"
            android:autoLink="email"/>

        <TextView
            android:id="@+id/textCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/valAuthContact"
            android:text="@string/about_credit"
            android:textSize="@dimen/text_size_header"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtIconAuthorCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCredits"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
             />



    </RelativeLayout>
</ScrollView>
